cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template/deepseek-chat/row_69_update_3_template_20250507_124338.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template creating VPC, Security Group, S3 Bucket, and DynamoDB Table with deletion protection'

Parameters:
  VPCCidrBlock:
    Description: 'CIDR block for the VPC'
    Type: String
    Default: '10.0.0.0/16'
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
    ConstraintDescription: 'Must be a valid CIDR range (x.x.x.x/y)'

  S3BucketName:
    Description: 'Name for the S3 bucket (3-63 chars, lowercase)'
    Type: String
    MinLength: 3
    MaxLength: 63
    AllowedPattern: '^[a-z0-9][a-z0-9-.]*[a-z0-9]$'
    ConstraintDescription: 'Bucket name must be 3-63 chars, lowercase, alphanumeric, hyphens or periods'

  DynamoDBTableName:
    Description: 'Name for the DynamoDB table (3-255 chars)'
    Type: String
    MinLength: 3
    MaxLength: 255
    AllowedPattern: '^[a-zA-Z0-9-._]+$'
    ConstraintDescription: 'Table name must be 3-255 chars, alphanumeric, hyphens, periods or underscores'

  ReadCapacityUnits:
    Description: 'Provisioned read capacity units for DynamoDB'
    Type: Number
    Default: 5
    MinValue: 1
    MaxValue: 40000

  WriteCapacityUnits:
    Description: 'Provisioned write capacity units for DynamoDB'
    Type: Number
    Default: 5
    MinValue: 1
    MaxValue: 40000

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-VPC'

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Default security group for VPC'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroup'

  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref S3BucketName
      VersioningConfiguration:
        Status: Enabled
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Bucket'
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain

  DynamoDBTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Ref DynamoDBTableName
      BillingMode: PROVISIONED
      AttributeDefinitions:
        - AttributeName: 'ID'
          AttributeType: 'S'
      KeySchema:
        - AttributeName: 'ID'
          KeyType: 'HASH'
      ProvisionedThroughput:
        ReadCapacityUnits: !Ref ReadCapacityUnits
        WriteCapacityUnits: !Ref WriteCapacityUnits
      SSESpecification:
        SSEEnabled: true
      DeletionProtectionEnabled: true
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-DynamoDBTable'

Outputs:
  VPCId:
    Description: 'The ID of the created VPC'
    Value: !Ref VPC

  SecurityGroupId:
    Description: 'The ID of the created Security Group'
    Value: !Ref SecurityGroup

  S3BucketName:
    Description: 'The name of the created S3 bucket'
    Value: !Ref S3Bucket

  DynamoDBTableName:
    Description: 'The name of the created DynamoDB table'
    Value: !Ref DynamoDBTable
